<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/BotonBusqueda"
        android:layout_width="196dp"
        android:layout_height="156dp"
        android:onClick="onClickBusqueda"
        android:text="@string/BotonBusqueda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172" />

    <Button
        android:id="@+id/BotonCrearAnuncio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickCrearAnuncio"
        android:text="@string/BotonCrearAnuncio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BotonBusqueda"
        app:layout_constraintVertical_bias="0.129" />

    <Button
        android:id="@+id/BotonMostrarMisAnuncios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickMostrarMisAnuncios"
        android:text="@string/BotonMostrarMisAnuncios"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BotonCrearAnuncio"
        app:layout_constraintVertical_bias="0.13" />

    <Button
        android:id="@+id/BotonAnadirSaldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="onClickAnadirSaldo"
        android:text="Añadir saldo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BotonMostrarMisAnuncios"
        app:layout_constraintVertical_bias="0.038" />

    <Button
        android:id="@+id/BotonCerrarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickCerrarSesion"
        android:text="@string/BotonCerrarSesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BotonAnadirSaldo"
        app:layout_constraintVertical_bias="0.252" />

</androidx.constraintlayout.widget.ConstraintLayout>